<resources>
    <string name="app_name">submission4cataloguemovie</string>
    <string name="menu_nowPlaying">Now Playing</string>
    <string name="menu_upcomming">Up Comming</string>
    <string name="menu_favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_upComming">Up Comming Movies</string>
    <string name="action_search">Favorite Movies</string>
    <string name="action_nowplaying">Now Playing</string>
    <string name="menu_search">Search</string>
    <string name="menu_setting">Setting</string>
    <string name="search_hint">Search by Title</string>
    <string name="lang">en</string>
    <string name="overview">Overview</string>
    <string name="release">Release Date</string>
    <string name="Genre">Genres</string>
    <string name="string_language">Language</string>
    <string name="film_duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="titleGenre">Genres</string>
    <string name="titleLang">Language</string>
    <string name="titleOverview">Overview</string>
    <string name="titileRate">Rating</string>
    <string name="titleRelease">Release  Date</string>
    <string name="titleRuntime">Duration</string>

    <string name="titleReminder">Catalougue Movie Reminder</string>
    <string name="messageReminder">Hey! We missed you!</string>
    <string name="menu_changeLang">Change Language</string>
    <string name="menu_setNotification">Notification Setting</string>

    <string name="title_activity_notification_setting">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dailyreminder">daily_reminder</string>
    <string name="dailyremindertitle">Daily Reminder</string>
    <string name="dailyremindersummary">Reminder for return to the apps</string>
    <string name="releasereminder">releasereminder</string>
    <string name="releaseremindertitle">Release Reminder</string>
    <string name="releaseremindersummary">Reminder for showing movie that release today</string>
    <string name="notification_title">Catalogue Movie</string>
    <string name="notification_text">Catalogue Movie missing you ! Click to open</string>
    <string name="notification_subtext">Catalogue Movie - Now</string>
    <string name="releasedToday">Release Today</string>
    <string name="willReleaseOn">will released in</string>
    <string name="days">days</string>
    <string name="ops">Oops!</string>
    <string name="nothing">No movie was released today ...</string>
    <string name="catalogmovie">Catalogue Movie</string>
    <string name="group_release">Released Movie</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">Favorit Movie</string>
</resources>
