<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_changelang"
                android:title="@string/menu_changeLang"/>
            <item
                android:id="@+id/menu_setNotification"
                android:title="@string/menu_setNotification"/>
        </menu>
    </item>
</menu>